test/tests/ParameterizedNonGeneric.expected
ParameterizedNonGeneric.frost:2:15: error: 'frost.core.String' expected 0 generic arguments, but found 1
ParameterizedNonGeneric.frost:4:22: error: 'frost.core.Object' expected 0 generic arguments, but found 1
2 errors
