test/tests/ParameterizedNonGeneric.frost
class ParameterizedNonGeneric {
    def error:String<Int>

    def error2 := 5->Object<String>
}